# browser_backup_tool

./: .gitignore  Cargo.toml  README.md  install.sh  run.sh
src/: app.rs  backup.rs  discovery.rs  lib.rs  main.rs  process.rs  ui.rs
tests/: app_state.rs  backup.rs  discovery.rs  process.rs
